--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notes App</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <script src="script.js" defer></script>
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+  <div class="notes">
+    <div class="tools">
+      <button><i class="fas fa-edit"></i></button>
+      <button><i class="fas fa-trash-alt"></i></button>
+    </div>
+    <div class="main">
+      <textarea></textarea>
+    </div>
   </div>
 </body>
 
