--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <title>Notes App</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+  <script scr="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.7/marked.min.js"></script>
   <script src="script.js" defer></script>
 </head>
 
 <body>
   <div class="notes">
     <div class="tools">
-      <button><i class="fas fa-edit"></i></button>
-      <button><i class="fas fa-trash-alt"></i></button>
+      <button class="edit"><i class="fas fa-edit"></i></button>
+      <button class="delete"><i class="fas fa-trash-alt"></i></button>
     </div>
     <div class="main">
       <textarea></textarea>
